Corrección de error ortográfico

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Este directorio contiene el material con el que se trabajará en la materia de P
 
 Está dividido en otros directorios que incluyen:
 
-docs: inlcuye documentos de notas para la clase.
+docs: incluye documentos de notas para la clase.
 
 src: Incluye los documentos con los que se trabaja durante la clase.
 
